--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,43 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
+# General
 .DS_Store
-*.pem
+.AppleDouble
+.LSOverride
+._*
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Node.js / Frontend
+client/node_modules/
+client/.next/
+client/out/
+client/build/
+client/.env
+client/.env.local
+client/.env.development.local
+client/.env.test.local
+client/.env.production.local
+client/npm-debug.log*
+client/yarn-debug.log*
+client/yarn-error.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Python / Backend
+server/__pycache__/
+server/*.py[cod]
+server/*$py.class
+server/.venv/
+server/venv/
+server/env/
+server/.env
+server/.pytest_cache/
+server/.coverage
+server/htmlcov/
 
-# vercel
-.vercel
+# Project Specific
+server/chroma_db/
+server/temp_uploads/
+server/static/*.mp3
+server/static/*.wav
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
